* Fix button focus color * Wrap long titles in search results

--- a/static/css/cdr-ui.css
+++ b/static/css/cdr-ui.css
@@ -1005,6 +1005,11 @@ table.dataTable tbody tr.odd {
   margin-bottom: 10px;
 }
 
+.button.is-focused,
+.button:focus {
+  color: white;
+}
+
 /* Bulma overrides */
 .select {
   margin-bottom: 15px;
